--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,51 @@
 	<title>Mi primera página!</title>
 </head>
 <body>
-	Holi Mundo!
+	Headers
+	<h1> This is the largest </h1>
+	<h2> Menos </h2>
+	<h3> Menos </h3>
+	<h4> Menos </h4>
+	<h5> Menos </h5>
+	<h6> Menos </h6>
+	An Unordered List...
+	<ul> 
+		<li>Primer Item</li>
+		
+		<li>Segundo Item</li>
+		<li>blabla Item</li>
+	</ul>
+	Organizada
+	<ol>
+		<li>  Primerooo </li>
+		<li> Segunduuuu</li>
+
+	</ol>	
+	Imagenes
+		<img src="/home/simlopezza/Downloads/bonillin.jpg" width="40%" >
+
+	Tablas
+	<h1> Presidentes </h1>
+		<table>
+			<tr>
+				<th>Primer nombre</th> 
+				<th> blabla last name </th>
+			</tr>
+			<tr>
+				<td>Jorge</td>
+				<td> blabla</td>
+			</tr>
+		</table>
+
+	Input data
+	<form>
+		<input type="text" placeholder="Full Name" name="name">
+		<button>Submit!</button>
+
+	</form>
+
+
+
+
 </body>
 </html>
