Arregle espacios en el submit

--- a/hello.html
+++ b/hello.html
@@ -41,11 +41,16 @@
 				<td> blabla</td>
 			</tr>
 		</table>
-
+	<br>
+	<center>
 	Input data
 	<form>
+
 		<input type="text" placeholder="Full Name" name="name">
+		<br>
+
 		<button>Submit!</button>
+	</center>
 
 	</form>
 </body>
