agregue otra forma de pagina

--- a/style2.html
+++ b/style2.html
@@ -2,16 +2,11 @@
 <html>
 <head>
 	<title>Mi primera página!</title>
-	<style>
-		h1 {
-			color:blue;
-			text-align: center;
-			}
-
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1> Bienvenidos a mi página!</h1>
+	<h1> Otro headline </h1>
 	<p> Hola mundo, un parrafo. </p>
 	<p> Otro párrafo. </p>
 </body>
