--- a/style1.html
+++ b/style1.html
@@ -4,7 +4,7 @@
 	<title>Mi primera página!</title>
 	<style>
 		h1 {
-			color:blue;
+			color:#5dc0c2;
 			text-align: center;
 			}
 
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<h1> Bienvenidos a mi página!</h1>
+	<h1> Otro headline </h1>
 	<p> Hola mundo, un parrafo. </p>
 	<p> Otro párrafo. </p>
 </body>
